# Scam-Training

./: .gitignore
data/: pipeline.txt
data/batches/: info.txt
pythonscripts/: chess_utils.py  firstrainscript.ipynb  psqt.py  utils.py
pythonscripts/.ipynb_checkpoints/: firstrainscript-checkpoint.ipynb
rustscripts/: Cargo.toml
rustscripts/src/: engine.rs  epd_to_batch.rs  pgn_to_epd.rs  refine_epd.rs
